--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://juliusg034.github.io/till-count-react",
+  "homepage": "https://juliusg034.github.io/till-count-react/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
